Fix header padding and languages alignement error

--- a/style.css
+++ b/style.css
@@ -953,7 +953,7 @@ ul {
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding-left: 10%;
+    padding-left: 5%;
   }
 
   .narson {
@@ -962,7 +962,7 @@ ul {
 
   .detail {
     height: 98px;
-    width: 920px;
+    width: 55%;
     left: 0;
     top: 134px;
   }
@@ -1203,7 +1203,7 @@ ul {
   .skill-list {
     display: flex;
     flex-direction: column;
-    margin-top: -10%;
+    margin-top: -8%;
     width: 50vw;
     height: 60vh;
     margin-left: 2rem;
@@ -1295,7 +1295,7 @@ ul {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-left: 8rem;
+    margin-left: 7.5rem;
     margin-top: 5rem;
   }
 
@@ -1319,7 +1319,7 @@ ul {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-left: 3rem;
+    margin-left: 2.5rem;
     margin-top: 9.7rem;
   }
 
